# lighthouse2

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LightHouse2.sln  README.md  clean.bat  compile
apps/_shareddata/: CMakeLists.txt  legocar.mtl
apps/_shareddata/pica/: pica_materials.xml
apps/_shareddata/plane/: plane.mtl
apps/_shareddata/scene/: tetrahedron.mtl  untitled.gltf
apps/_shareddata/spaceman/: untitled.mtl
apps/ai_debugger/: ai_debugger.vcxproj  main.cpp
apps/benchmarkapp/: CMakeLists.txt  camera.xml  main.cpp
apps/benchmarkapp/lib/irrKlang/: IrrKlangConfig.cmake
apps/demodata/plane/: plane.mtl
apps/demodata/tetrahedron/: tetrahedron.mtl
apps/imguiapp/: CMakeLists.txt  camera.xml  imgui.ini  imguiapp.vcxproj  main.cpp  main_tools.h
apps/pbrtdemoapp/: CMakeLists.txt  camera.xml  imgui.ini  main.cpp  pbrtdemoapp.vcxproj
apps/tinyapp/: CMakeLists.txt  camera.xml  main.cpp  main_tools.h  tinyapp.vcxproj
apps/tinyapp2/: CMakeLists.txt  camera.xml  main.cpp
apps/viewerapp/: CMakeLists.txt  camera.xml  imgui.ini  main.cpp
cmake/: FindFreeType2.cmake  FindShaderc.cmake  FreeImageConfig.cmake  OptiX6Config.cmake  OptiX7Config.cmake  glfw3Config.cmake
docs/: PBRT_support.md
lib/AntTweakBar/: CMakeLists.txt
lib/CUDA/: CMakeLists.txt  helper_math.h
lib/CUDA/shared_host_code/: CMakeLists.txt  cudatools.h
lib/CUDA/shared_kernel_code/: lights_shared.h  material_shared.h  sampling_shared.h  tools_shared.h
lib/CustomCore_tests/: BVHTest.cpp  CMakeLists.txt  PathGuidingTest.cpp  RaytracerTest.cpp
lib/FreeImage/: FindFreeImage.cmake
lib/GLFW/: Findglfw3.cmake
lib/OptiX/CMake/: FindOptiX.cmake
lib/OptiX/include/optixu/: optixpp_namespace.h
lib/PathFinding/recastnavigation/: CMakeLists.txt
lib/PathFinding/recastnavigation/DebugUtils/: CMakeLists.txt
lib/PathFinding/recastnavigation/Detour/: CMakeLists.txt
lib/PathFinding/recastnavigation/DetourCrowd/: CMakeLists.txt
lib/PathFinding/recastnavigation/DetourTileCache/: CMakeLists.txt
lib/PathFinding/recastnavigation/Recast/: CMakeLists.txt
lib/RenderCore_Custom/: CMakeLists.txt  core_settings.h  intersections.cpp  intersections.h  raytracer.cpp  raytracer.h  rendercore.cpp  rendercore.h  renderhtest.h
lib/RenderCore_Custom/include/: core_settings.h
lib/RenderCore_Custom/include/acceleration/: bvh.h
lib/RenderCore_Custom/include/core/: base_definitions.h  rendercore.h
lib/RenderCore_Custom/include/environment/: environment.h  geometry.h  intersections.h  primitives.h
lib/RenderCore_Custom/include/graphics/: lighting.h  raytracer.h  renderer.h
lib/RenderCore_Custom/include/guiding/: BRDF.h  PathGuidingTracer.h  Tree.h  utils.h
lib/RenderCore_Custom/include/threading/: ctpl_stl.h
lib/RenderCore_Custom/src/acceleration/: bvh.cpp
lib/RenderCore_Custom/src/core/: rendercore.cpp
lib/RenderCore_Custom/src/environment/: environment.cpp  geometry.cpp  intersections.cpp  primitives.cpp
lib/RenderCore_Custom/src/graphics/: lighting.cpp  raytracer.cpp  renderer.cpp
lib/RenderCore_Custom/src/guiding/: BRDF.cpp  PathGuidingTracer.cpp  Tree.cpp  utils.cpp
lib/RenderCore_Minimal/: CMakeLists.txt  core_settings.h  rendercore.cpp  rendercore.h
lib/RenderCore_Optix7/: CMakeLists.txt  core_mesh.h  core_settings.h  rendercore.cpp  rendercore.h  rendercore_optix7.vcxproj
lib/RenderCore_Optix7Adaptive/: CMakeLists.txt  rendercore.cpp  rendercore.h
lib/RenderCore_Optix7Filter/: CMakeLists.txt  core_mesh.h  core_settings.h  rendercore.cpp  rendercore.h  rendercore_optix7filter.vcxproj
lib/RenderCore_Optix7Guiding/: CMakeLists.txt  rendercore.cpp  rendercore.h
lib/RenderCore_OptixPrime_B/: CMakeLists.txt  core_settings.h  rendercore.cpp  rendercore.h  rendercore_optixprime_b.vcxproj
lib/RenderCore_OptixPrime_BDPT/: CMakeLists.txt  core_mesh.cpp  core_settings.h  rendercore.cpp  rendercore.h  rendercore_optixprime_bdpt.vcxproj
lib/RenderCore_OptixPrime_BDPT/kernels/: .cuda.h
lib/RenderCore_OptixPrime_PBRT/: CMakeLists.txt  core_settings.h  rendercore.cpp  rendercore.h  rendercore_optixprime_pbrt.vcxproj
lib/RenderCore_OptixPrime_PBRT/kernels/: .cuda.cu  .cuda.h  Storage.h  VariantStore.h  bxdf.h  material_bsdf_stack.h  material_disney.h  material_intf.h  pathtracer.h
lib/RenderCore_OptixPrime_PBRT/kernels/pbrt/: disney.h  fresnel.h  glass.h  materials.h  matte.h  metal.h  microfacet.h  mirror.h  (+4 more)
lib/RenderCore_PrimeAdaptive/: CMakeLists.txt  rendercore.cpp  rendercore.h  rendercore_primeadaptive.vcxproj
lib/RenderCore_PrimeRef/: CMakeLists.txt  core_settings.h  rendercore.cpp  rendercore.h  rendercore_primeref.vcxproj
lib/RenderCore_PrimeRef/kernels/: bsdf.h
lib/RenderCore_SoftRasterizer/: CMakeLists.txt  core_settings.h  rendercore.cpp  rendercore.h  rendercore_softrasterizer.vcxproj
lib/RenderCore_Vulkan_RT/: .clang-format  CMakeLists.txt  core_api.cpp  core_settings.h  rendercore.cpp  rendercore.h  rendercore_vulkan_rt.vcxproj  uniform_objects.h  vulkan_compute_pipeline.cpp  vulkan_device.cpp  vulkan_gl_texture_interop.cpp
lib/RenderCore_Vulkan_RT/shaders/: rt_finalize.comp  rt_shade.comp
lib/RenderSystem/: CMakeLists.txt  common_classes.h  common_types.h  core_api_base.cpp  core_api_base.h  host_material.cpp  host_material.h  host_mesh.cpp  host_mesh.h  host_node.cpp  host_scene.cpp  host_scene.h  host_skydome.cpp  host_skydome.h  host_texture.cpp  host_texture.h  render_api.cpp  render_api.h
lib/RenderSystem/materials/pbrt/: api.cpp  api.h  create_material.cpp  create_material.h  paramset.cpp  paramset.h  parser.cpp  pbrt_wrap.h  spectrum.h  texture.h
lib/RenderSystem/materials/pbrt/shapes/: plymesh.cpp  plymesh.h  triangle.cpp  triangle.h
lib/RenderSystem/materials/pbrt/textures/: constant.cpp  constant.h
lib/glad/: CMakeLists.txt
lib/half2.1.0/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/platform/: CMakeLists.txt  platform.cpp  platform.h  system.cpp  system.h
lib/taskflow/: CMakeLists.txt
lib/tinygltf/: CMakeLists.txt
lib/tinyobjloader/: CMakeLists.txt  tiny_obj_loader.h
lib/tinyxml2/: CMakeLists.txt
